add model and routes

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "travel-tour",
   "version": "1.0.0",
   "description": "travel-tour",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "sass src/scss/main.scss src/css/styles.css --watch",
-    "dev": "nodemon server.js"
+    "scss": "sass public/src/scss/main.scss public/src/css/styles.css --watch",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
